[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/WKnight.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/chessBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/FakeButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://sprites/BBishop.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/WBishop.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/BQueen.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/BKing.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/BKnight.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/WPawn.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/BPawn.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/WRook.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/WQueen.tscn" type="PackedScene" id=13]
[ext_resource path="res://sprites/WKing.tscn" type="PackedScene" id=14]
[ext_resource path="res://sprites/BRook.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/futuristic-technology-background-with-honeycombs_23-2148481277.jpg" type="Texture" id=16]
[ext_resource path="res://5eba9a49ae6b7.png" type="Texture" id=17]
[ext_resource path="res://robotTheme.tres" type="Theme" id=20]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="GDScript" id=2]
script/source = "extends PopupDialog


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():

	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="ChessBoard" parent="." instance=ExtResource( 2 )]
position = Vector2( 425.238, 405.703 )
scale = Vector2( 0.75, 0.75 )

[node name="ChessBlack" type="Node2D" parent="."]
visible = false

[node name="KingBlack" parent="ChessBlack" instance=ExtResource( 8 )]
position = Vector2( 439.505, 139.504 )
scale = Vector2( 0.25, 0.25 )

[node name="BishopBlack1" parent="ChessBlack" instance=ExtResource( 5 )]
position = Vector2( 394.739, 230.397 )
scale = Vector2( 0.25, 0.25 )

[node name="BishopBlack2" parent="ChessBlack" instance=ExtResource( 5 )]
position = Vector2( 393.919, 170.776 )
scale = Vector2( 0.25, 0.25 )

[node name="BishopBlack3" parent="ChessBlack" instance=ExtResource( 5 )]
position = Vector2( 394.661, 112.288 )
scale = Vector2( 0.25, 0.25 )

[node name="KnightBlack1" parent="ChessBlack" instance=ExtResource( 9 )]
position = Vector2( 287.643, 165.249 )
scale = Vector2( 0.25, 0.25 )

[node name="KnightBlack2" parent="ChessBlack" instance=ExtResource( 9 )]
position = Vector2( 500.068, 169.818 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnBlack1" parent="ChessBlack" instance=ExtResource( 11 )]
position = Vector2( 241.414, 262.925 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnBlack2" parent="ChessBlack" instance=ExtResource( 11 )]
position = Vector2( 288.388, 294.566 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnBlack3" parent="ChessBlack" instance=ExtResource( 11 )]
position = Vector2( 349.906, 318.966 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnBlack4" parent="ChessBlack" instance=ExtResource( 11 )]
position = Vector2( 400.057, 342.608 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnBlack5" parent="ChessBlack" instance=ExtResource( 11 )]
position = Vector2( 446.04, 313.385 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnBlack6" parent="ChessBlack" instance=ExtResource( 11 )]
position = Vector2( 497.832, 286.302 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnBlack7" parent="ChessBlack" instance=ExtResource( 11 )]
position = Vector2( 548.812, 263.61 )
scale = Vector2( 0.25, 0.25 )

[node name="QueenBlack1" parent="ChessBlack" instance=ExtResource( 7 )]
position = Vector2( 345.344, 139.036 )
scale = Vector2( 0.25, 0.25 )

[node name="RookBlack1" parent="ChessBlack" instance=ExtResource( 15 )]
position = Vector2( 241.281, 203.752 )
scale = Vector2( 0.25, 0.25 )

[node name="RookBlack2" parent="ChessBlack" instance=ExtResource( 15 )]
position = Vector2( 542.162, 199.407 )
scale = Vector2( 0.248188, 0.248188 )

[node name="ChessWhite" type="Node2D" parent="."]
visible = false

[node name="BishopWhite1" parent="ChessWhite" instance=ExtResource( 6 )]
position = Vector2( 394.904, 646.815 )
scale = Vector2( 0.25, 0.25 )

[node name="BishopWhite2" parent="ChessWhite" instance=ExtResource( 6 )]
position = Vector2( 398.459, 581.026 )
scale = Vector2( 0.25, 0.25 )

[node name="BishopWhite3" parent="ChessWhite" instance=ExtResource( 6 )]
position = Vector2( 395.792, 528.574 )
scale = Vector2( 0.25, 0.25 )

[node name="KingWhite" parent="ChessWhite" instance=ExtResource( 14 )]
position = Vector2( 450.024, 617.477 )
scale = Vector2( 0.25, 0.25 )

[node name="KnightWhite1" parent="ChessWhite" instance=ExtResource( 1 )]
position = Vector2( 286.443, 572.136 )
scale = Vector2( 0.25, 0.25 )

[node name="KnightWhite2" parent="ChessWhite" instance=ExtResource( 1 )]
position = Vector2( 498.92, 587.25 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnWhite1" parent="ChessWhite" instance=ExtResource( 10 )]
position = Vector2( 238.435, 493.013 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnWhite2" parent="ChessWhite" instance=ExtResource( 10 )]
position = Vector2( 294.443, 464.564 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnWhite3" parent="ChessWhite" instance=ExtResource( 10 )]
position = Vector2( 348.675, 431.67 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnWhite4" parent="ChessWhite" instance=ExtResource( 10 )]
position = Vector2( 397.571, 411.222 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnWhite5" parent="ChessWhite" instance=ExtResource( 10 )]
position = Vector2( 449.134, 441.449 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnWhite6" parent="ChessWhite" instance=ExtResource( 10 )]
position = Vector2( 501.587, 464.564 )
scale = Vector2( 0.25, 0.25 )

[node name="PawnWhite7" parent="ChessWhite" instance=ExtResource( 10 )]
position = Vector2( 549.597, 483.233 )
scale = Vector2( 0.25, 0.25 )

[node name="QueenWhite1" parent="ChessWhite" instance=ExtResource( 13 )]
position = Vector2( 349.024, 615.112 )
scale = Vector2( 0.25, 0.25 )

[node name="RookWhite1" parent="ChessWhite" instance=ExtResource( 12 )]
position = Vector2( 237.862, 559.888 )
scale = Vector2( 0.25, 0.25 )

[node name="RookWhite2" parent="ChessWhite" instance=ExtResource( 12 )]
position = Vector2( 551.687, 555.443 )
scale = Vector2( 0.25, 0.25 )

[node name="ChessLocation" type="Node2D" parent="."]

[node name="A" type="Node2D" parent="ChessLocation"]

[node name="A1" parent="ChessLocation/A" instance=ExtResource( 3 )]
margin_left = 189.973
margin_top = 531.413
margin_right = 239.972
margin_bottom = 581.413

[node name="A2" parent="ChessLocation/A" instance=ExtResource( 3 )]
margin_left = 189.973
margin_top = 471.79
margin_right = 239.972
margin_bottom = 521.79

[node name="A3" parent="ChessLocation/A" instance=ExtResource( 3 )]
margin_left = 189.973
margin_top = 409.969
margin_right = 239.972
margin_bottom = 459.969

[node name="A4" parent="ChessLocation/A" instance=ExtResource( 3 )]
margin_left = 189.973
margin_top = 350.545
margin_right = 239.972
margin_bottom = 400.545

[node name="A5" parent="ChessLocation/A" instance=ExtResource( 3 )]
margin_left = 189.973
margin_top = 290.123
margin_right = 239.972
margin_bottom = 340.123

[node name="A6" parent="ChessLocation/A" instance=ExtResource( 3 )]
margin_left = 189.973
margin_top = 228.899
margin_right = 239.972
margin_bottom = 278.899

[node name="B" type="Node2D" parent="ChessLocation"]

[node name="B1" parent="ChessLocation/B" instance=ExtResource( 3 )]
margin_left = 243.972
margin_top = 561.825
margin_right = 293.972
margin_bottom = 611.825

[node name="B2" parent="ChessLocation/B" instance=ExtResource( 3 )]
margin_left = 243.972
margin_top = 501.202
margin_right = 293.972
margin_bottom = 551.202

[node name="B3" parent="ChessLocation/B" instance=ExtResource( 3 )]
margin_left = 243.972
margin_top = 440.38
margin_right = 293.972
margin_bottom = 490.38

[node name="B4" parent="ChessLocation/B" instance=ExtResource( 3 )]
margin_left = 243.972
margin_top = 380.956
margin_right = 293.972
margin_bottom = 430.956

[node name="B5" parent="ChessLocation/B" instance=ExtResource( 3 )]
margin_left = 243.972
margin_top = 320.535
margin_right = 293.972
margin_bottom = 370.535

[node name="B6" parent="ChessLocation/B" instance=ExtResource( 3 )]
margin_left = 243.972
margin_top = 259.311
margin_right = 293.972
margin_bottom = 309.311

[node name="B7" parent="ChessLocation/B" instance=ExtResource( 3 )]
margin_left = 243.972
margin_top = 199.879
margin_right = 293.972
margin_bottom = 249.879

[node name="C" type="Node2D" parent="ChessLocation"]

[node name="C1" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 593.037
margin_right = 343.972
margin_bottom = 643.037

[node name="C2" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 532.413
margin_right = 343.972
margin_bottom = 582.413

[node name="C3" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 471.592
margin_right = 343.972
margin_bottom = 521.592

[node name="C4" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 412.168
margin_right = 343.972
margin_bottom = 462.168

[node name="C5" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 351.747
margin_right = 343.972
margin_bottom = 401.747

[node name="C6" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 290.523
margin_right = 343.972
margin_bottom = 340.523

[node name="C7" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 231.091
margin_right = 343.972
margin_bottom = 281.091

[node name="C8" parent="ChessLocation/C" instance=ExtResource( 3 )]
margin_left = 293.972
margin_top = 170.868
margin_right = 343.972
margin_bottom = 220.868

[node name="D" type="Node2D" parent="ChessLocation"]

[node name="D1" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 621.047
margin_right = 396.972
margin_bottom = 671.047

[node name="D2" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 560.424
margin_right = 396.972
margin_bottom = 610.424

[node name="D3" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 499.603
margin_right = 396.972
margin_bottom = 549.603

[node name="D4" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 440.179
margin_right = 396.972
margin_bottom = 490.179

[node name="D5" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 379.757
margin_right = 396.972
margin_bottom = 429.757

[node name="D6" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 318.533
margin_right = 396.972
margin_bottom = 368.533

[node name="D7" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 259.101
margin_right = 396.972
margin_bottom = 309.101

[node name="D8" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 198.879
margin_right = 396.972
margin_bottom = 248.879

[node name="D9" parent="ChessLocation/D" instance=ExtResource( 3 )]
margin_left = 346.972
margin_top = 140.257
margin_right = 396.972
margin_bottom = 190.258

[node name="E" type="Node2D" parent="ChessLocation"]

[node name="E1" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 651.457
margin_right = 448.972
margin_bottom = 701.457

[node name="E2" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 590.834
margin_right = 448.972
margin_bottom = 640.834

[node name="E3" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 530.013
margin_right = 448.972
margin_bottom = 580.013

[node name="E4" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 470.589
margin_right = 448.972
margin_bottom = 520.589

[node name="E5" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 410.167
margin_right = 448.972
margin_bottom = 460.167

[node name="E6" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 348.943
margin_right = 448.972
margin_bottom = 398.943

[node name="E7" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 289.511
margin_right = 448.972
margin_bottom = 339.511

[node name="E8" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 229.289
margin_right = 448.972
margin_bottom = 279.289

[node name="E9" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 170.668
margin_right = 448.972
margin_bottom = 220.668

[node name="E10" parent="ChessLocation/E" instance=ExtResource( 3 )]
margin_left = 398.972
margin_top = 112.045
margin_right = 448.972
margin_bottom = 162.046

[node name="F" type="Node2D" parent="ChessLocation"]

[node name="F1" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 621.047
margin_right = 501.972
margin_bottom = 671.047

[node name="F2" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 560.424
margin_right = 501.972
margin_bottom = 610.424

[node name="F3" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 499.603
margin_right = 501.972
margin_bottom = 549.603

[node name="F4" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 440.179
margin_right = 501.972
margin_bottom = 490.179

[node name="F5" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 379.757
margin_right = 501.972
margin_bottom = 429.757

[node name="F6" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 318.533
margin_right = 501.972
margin_bottom = 368.533

[node name="F7" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 259.101
margin_right = 501.972
margin_bottom = 309.101

[node name="F8" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 198.879
margin_right = 501.972
margin_bottom = 248.879

[node name="F9" parent="ChessLocation/F" instance=ExtResource( 3 )]
margin_left = 451.972
margin_top = 140.257
margin_right = 501.972
margin_bottom = 190.258

[node name="G" type="Node2D" parent="ChessLocation"]
z_as_relative = false

[node name="G1" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 593.037
margin_right = 554.578
margin_bottom = 643.037

[node name="G2" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 532.413
margin_right = 554.578
margin_bottom = 582.413

[node name="G3" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 471.592
margin_right = 554.578
margin_bottom = 521.592

[node name="G4" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 412.168
margin_right = 554.578
margin_bottom = 462.168

[node name="G5" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 351.747
margin_right = 554.578
margin_bottom = 401.747

[node name="G6" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 290.523
margin_right = 554.578
margin_bottom = 340.523

[node name="G7" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 231.091
margin_right = 554.578
margin_bottom = 281.091

[node name="G8" parent="ChessLocation/G" instance=ExtResource( 3 )]
margin_left = 504.575
margin_top = 170.868
margin_right = 554.578
margin_bottom = 220.868

[node name="H" type="Node2D" parent="ChessLocation"]

[node name="H1" parent="ChessLocation/H" instance=ExtResource( 3 )]
margin_left = 554.967
margin_top = 561.825
margin_right = 604.967
margin_bottom = 611.825

[node name="H2" parent="ChessLocation/H" instance=ExtResource( 3 )]
margin_left = 554.967
margin_top = 501.202
margin_right = 604.967
margin_bottom = 551.202

[node name="H3" parent="ChessLocation/H" instance=ExtResource( 3 )]
margin_left = 554.967
margin_top = 440.38
margin_right = 604.967
margin_bottom = 490.38

[node name="H4" parent="ChessLocation/H" instance=ExtResource( 3 )]
margin_left = 554.967
margin_top = 380.956
margin_right = 604.967
margin_bottom = 430.956

[node name="H5" parent="ChessLocation/H" instance=ExtResource( 3 )]
margin_left = 554.967
margin_top = 320.535
margin_right = 604.967
margin_bottom = 370.535

[node name="H6" parent="ChessLocation/H" instance=ExtResource( 3 )]
margin_left = 554.967
margin_top = 259.311
margin_right = 604.967
margin_bottom = 309.311

[node name="H7" parent="ChessLocation/H" instance=ExtResource( 3 )]
margin_left = 554.967
margin_top = 199.879
margin_right = 604.967
margin_bottom = 249.879

[node name="I" type="Node2D" parent="ChessLocation"]

[node name="I1" parent="ChessLocation/I" instance=ExtResource( 3 )]
margin_left = 607.177
margin_top = 531.413
margin_right = 657.177
margin_bottom = 581.413

[node name="I2" parent="ChessLocation/I" instance=ExtResource( 3 )]
margin_left = 607.177
margin_top = 470.79
margin_right = 657.177
margin_bottom = 520.79

[node name="I3" parent="ChessLocation/I" instance=ExtResource( 3 )]
margin_left = 607.177
margin_top = 409.969
margin_right = 657.177
margin_bottom = 459.969

[node name="I4" parent="ChessLocation/I" instance=ExtResource( 3 )]
margin_left = 607.177
margin_top = 350.545
margin_right = 657.177
margin_bottom = 400.545

[node name="I5" parent="ChessLocation/I" instance=ExtResource( 3 )]
margin_left = 607.177
margin_top = 290.123
margin_right = 657.177
margin_bottom = 340.123

[node name="I6" parent="ChessLocation/I" instance=ExtResource( 3 )]
margin_left = 607.177
margin_top = 228.899
margin_right = 657.177
margin_bottom = 278.899

[node name="Action" type="Label" parent="."]
margin_left = 580.0
margin_top = 20.0
margin_right = 778.0
margin_bottom = 90.0
theme = ExtResource( 20 )
custom_styles/normal = SubResource( 1 )
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected_piece" type="Label" parent="."]
visible = false
margin_left = 21.2127
margin_top = 123.658
margin_right = 359.213
margin_bottom = 197.658
theme = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="."]
margin_left = 250.0
margin_top = 20.0
margin_right = 556.0
margin_bottom = 91.0
rect_clip_content = true
theme = ExtResource( 20 )
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="."]
visible = false
margin_left = 18.0
margin_top = 325.0
margin_right = 782.0
margin_bottom = 779.0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="futuristic-technology-background-with-honeycombs_23-2148481277" type="Sprite" parent="."]
visible = false
position = Vector2( 628.172, 422.06 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 16 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 20.3211
margin_top = 17.3727
margin_right = 6268.32
margin_bottom = 2457.37
rect_scale = Vector2( 0.01, 0.01 )
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]

[node name="make_request" type="Button" parent="."]
visible = false
margin_left = 52.6639
margin_top = 110.871
margin_right = 161.664
margin_bottom = 218.871
text = "MAKE REQUEST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 275.0
margin_top = 150.0
margin_right = 575.0
margin_bottom = 400.0
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="PopupDialog"]
margin_right = 300.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameresult" type="Label" parent="PopupDialog"]
margin_right = 300.0
margin_bottom = 52.0
theme = ExtResource( 20 )
text = "GAME RESULT"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="State" type="Label" parent="PopupDialog"]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 20 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
